# whistle

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  LICENSE.md  README.md  SPEC.md  list.ts  main.whi  rustfmt.toml  test.ts  test.wasm  test2.whi
.assets/: whistle.ai
.github/workflows/: checks.yml  rust.yml
ast/: Cargo.toml
ast/src/: lib.rs
atoms/: Cargo.toml  build.rs  words.txt
atoms/src/: lib.rs
cli/: Cargo.toml  deps.ts  whistle.ts
cli/src/: lsp.rs  main.rs  util.rs
cli/src/lsp/: lsp.rs
common/: Cargo.toml
common/src/: keyword.rs  lib.rs  operator.rs  punc.rs  token.rs  types.rs
common/src/error/: compiler.rs  lexer.rs  mod.rs  parser.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  context.rs  errors.rs  lib.rs  memory.rs  module.rs  scope.rs  symbols.rs  types.rs
compiler/src/checker/: binder.rs  checker.rs  expr.rs  mod.rs  program.rs  stmt.rs  types.rs
compiler/src/compilers/: builtins.rs  expr.rs  external.rs  mod.rs  program.rs  stmt.rs  tip.rs  types.rs
core/: Cargo.toml  deps.ts  main.ts  whistle.ts
core/compiler/: compiler.ts  types.ts
core/compiler/js/: compiler.ts  js_compiler.ts  target.ts
core/parser/: expression.ts  literal.ts  node.ts  operator.ts  parser.ts  program.ts  statement.ts  tip.ts  tokenizer.ts
core/src/: lib.rs
core/src/ast/: mod.rs  operators.rs
core/src/lexer/: error.rs  lexer.rs  mod.rs  token.rs  tokenizer.rs
core/src/lexer/token/: keyword.rs  mod.rs  operator.rs
core/src/lexer/tokens/: float_lit.rs  int_lit.rs  keyword.rs  mod.rs  operator.rs  punc.rs  tip.rs
core/src/parser/: ast.rs  mod.rs  parser.rs  token.rs
core/src/parser/parsers/: expr.rs  expression.rs  ident.rs  literal.rs  mod.rs  operator.rs  statement.rs  stmt.rs
core/src/parser/position/: span.rs
core/src/parser/program/: expression.rs  literal.rs  mod.rs  operator.rs  statement.rs
core/tokenizer/: mod.ts  pattern.ts  rule.ts  token.ts  tokenizer.ts
doc/: README.md
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  value.rs
engine/src/chunk/: line.rs  mod.rs
examples/: 1k.whi  Add.whi  CodeBlock.whi  Comments.whi  Console.whi  Export.whi  Exports.whi  Function.whi  Functions.whi  HelloWorld.whi  Import.whi  ImportExport.whi  Imports.whi  Operators.whi  Test.whi  Test2.whi  Test3.whi  Tip.whi  Tokens.whi  Values.whi  Variable.whi  Variables.whi  add.wasm  add.whi  array.wasm  array.whi  assign.wasm  assign.whi  builtin.whi  cond.whi  core_test.whi  enum.whi  error.whi  fac.wasm  fac.whi  fun.whi  funs.wasm  funs.whi  helloworld.wasm  helloworld.whi  (+16 more)
examples/js/: helloworld.wasm  helloworld.whi  test.ts
examples/whistleless/: helloworld.wasm  test.ts
fmt/: Cargo.toml
fmt/src/: lib.rs
fmt/src/config/: mod.rs
fmt/src/utils/: mod.rs
helper/: browser.js  crypto.js  crypto.ts  deno.ts  mod.js  mod.ts  system.js  system.ts  utils.ts
lexer/: Cargo.toml
lexer/src/: error.rs  lib.rs  tokenizer.rs
lexer/src/token/: keyword.rs  operator.rs
old_compiler/: Cargo.toml
old_compiler/src/: compiler.rs  encoding.rs  opcodes.rs  types.rs
old_compiler/src/typechecker/: expr.rs  literal.rs  mod.rs
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lib.rs  parser.rs
parser/src/parsers/: expr.rs  ident.rs  literal.rs  mod.rs  operator.rs  program.rs  stmt.rs  types.rs
preprocessor/: Cargo.toml  README.md
preprocessor/src/: lib.rs
source/: lexer.ts  main.ts  parser.ts  whistle.ts
source/compiler/: compiler.ts
source/parser/: expression.ts  literal.ts  operator.ts  parser.ts  program.ts  statement.ts  tokenizer.ts
std/: README.md
std/core/: Math.whi  bump_allocator.whi  memory.whi
visit/: Cargo.toml
visit/src/: lib.rs
vm/: Cargo.toml
vm/src/: lib.rs
web/: Cargo.toml
web/src/: lib.rs  utils.rs
website/: docusaurus.config.js  sidebars.js
website/blog/: 2020-07-22-hello-world.md
website/docs/getting-started/: hello-world.md  installation.md
website/docs/guides/: playground.md
website/docs/internals/: compiler.md  parser.md  tokenizer.md
website/docs/whistle/: index.md  introduction.md
website/src/css/: custom.css
website/src/pages/: index.js  styles.module.css
website/static/: CNAME
