[package]
name = "whistle_cli"
version = "0.1.0"
authors = ["the Whistle authors"]
edition = "2018"

[[bin]]
name = "whistle"
path = "src/main.rs"

[dependencies]
whistle_ast = { path = "../ast/" }
whistle_common = { path = "../common/" }
# whistle_compiler = { path = "../compiler/" }
whistle_lexer = { path = "../lexer/" }
whistle_parser = { path = "../parser/" }
clap = "2.33.3"
