[package]
name = "whistle_cli"
version = "0.1.1"
authors = ["the Whistle authors"]
edition = "2021"

[[bin]]
name = "whistle"
path = "src/main.rs"

[dependencies]
whistle_ast = { path = "../ast/" }
whistle_common = { path = "../common/" }
whistle_compiler = { path = "../compiler/" }
whistle_lexer = { path = "../lexer/" }
whistle_parser = { path = "../parser/" }
whistle_preprocessor = { path = "../preprocessor" }
clap = "2.33.3"
