[package]
name = "whistle_preprocessor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whistle_lexer = { path = "../lexer" }
whistle_common ={ path = "../common"}
reqwest = { version = "0.11.20", features = ["blocking"] }
url = "2.4.1"